--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Shingo Yamazaki <shingoyamazaki00@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "HOST=0.0.0.0 PORT=3333 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
