--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "auth0-lock": "^12.4.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
