--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "author": "Shingo Yamazaki <shingoyamazaki00@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "HOST=0.0.0.0 PORT=3333 nuxt",
+    "dev": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3333 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "auth0-lock": "^12.4.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^2.0.0",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "consola": "^3.2.3",
+    "cross-env": "^7.0.3",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
